--- a/views/signupplayer.ejs
+++ b/views/signupplayer.ejs
@@ -96,7 +96,7 @@
       <input type="password" id="playerPassword" name="password" required>
 
       <button type="submit" id="playerSignupBtn">Sign Up</button>
-      <a href="http://localhost:3000/"><button type="button">Player Login</button></a>
+      <a href="/"><button type="button">Player Login</button></a>
     </form>
     <div id="notification" class="hidden">You are registered!</div>
   </div>
