--- a/views/signupadmin.ejs
+++ b/views/signupadmin.ejs
@@ -96,7 +96,7 @@
       <input type="password" id="adminPassword" name="password" required>
 
       <button type="submit" id="adminSignupBtn">Sign Up</button>
-      <a href="http://localhost:3000/"><button type="button">Admin Login</button></a>
+      <a href="/"><button type="button">Admin Login</button></a>
     </form>
     <div id="adminNotification" class="hidden">You are registered as an admin!</div>
   </div>
