--- a/views/playerdashboard.ejs
+++ b/views/playerdashboard.ejs
@@ -74,7 +74,7 @@
   </style>
 </head>
 <body>
-    <a href="http://localhost:3000/" style="padding: 10px; font-size: 30px;background-color: darkolivegreen;color: aliceblue;width: fit-content;border-radius: 50px;position: relative;bottom: 300px;right: 80px;">Signout</a>
+    <a href="/" style="padding: 10px; font-size: 30px;background-color: darkolivegreen;color: aliceblue;width: fit-content;border-radius: 50px;position: relative;bottom: 300px;right: 80px;">Signout</a>
   <div class="container">
     <h1>Welcome to the Player Dashboard!</h1>
     
