--- a/views/admindashboard.ejs
+++ b/views/admindashboard.ejs
@@ -85,7 +85,7 @@
     
 <div id="column">
   <h1>Welcome To The Admin Dashboard!</h1>
-  <a href="http://localhost:3000/" style="background-color:#2c3e50 ;font-size: 20px;border-radius: 20px;color: aliceblue;padding: 3px;width: fit-content;">Signout</a>
+  <a href="/" style="background-color:#2c3e50 ;font-size: 20px;border-radius: 20px;color: aliceblue;padding: 3px;width: fit-content;">Signout</a>
     <!-- Player List Container -->
     <div class="player-list-container" id="playersContainer" style="display: none;">
       <h2>List of Players</h2>
